[build-system]
requires = [
    "setuptools >= 64"
]
build-backend = "setuptools.build_meta"

[project]
name = "catapult-util"
description = "Catapult Utilities"
readme = "README.rst"
authors = [{name = "Lukas Moors", email = "me@lukasmoors.com"}, {name = "Bruno Firnkes", email = "bruno.firnkes@frontrowgroup.de"}]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["locking", "eventhub", "otel"]
requires-python = ">= 3.9"
dependencies = [
    "pymongo > 4.0",
    "azure-eventhub >= 5.15.0",
    "opentelemetry-exporter-otlp-proto-http >= 1.34.1"
]
dynamic = ["version"]

[tool.setuptools]
packages = ["event_hub", "locking", "otel"]
package-dir = {"" = "src"}
